# assignment-1

./: FormulaManipulator.cabal  README.md
app/: Main.hs
src/: ExprLanguage.hs  FormulaManipulator.hs  FormulatorCLI.hs
test/: Spec.hs
